--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <td class="spring">الجبهتين</td>
                 <td class="winter">العقرب</td>
                 <td class="winter">النبط</td>
-                <td class="winter">المرزمانية</td>
+                <td class="winter">المربعانية</td>
                 <td class="autumn">الوسم</td>
                 <td class="autumn">سهيل</td>
                 <td class="autumn">الأزرق والتبع</td>
@@ -122,7 +122,7 @@
                 <td>11:21</td>
                 <td>11:40</td>
                 <td>12:08</td>
-                <td class="header">طول فترة الضياء (ساعة)</td>
+                <td class="header">طول فترة الصيام (ساعة)</td>
             </tr>
             <tr>
                 <td class="spring">
